# api-contracts

./: .gitignore  go.mod  go.sum  package.json  pyproject.toml
.github/workflows/: buf-ci.yaml
api/: buf.gen.yaml  buf.yaml
api/auth/v1/: auth.proto  fields.proto
api/embeddings/v1/: embedding_service_events.proto  embeddings.proto  events.proto
api/likes/v1/: likes.proto
api/posts/v1/: events.proto  posts.proto  posts_service_events.proto
api/search/v1/: search.proto
api/views/v1/: views.proto
