[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspire_protobuf"
version = "0.3.2"
description = "Protobuf‑generated Python stubs for the auth and embeddings APIs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "protobuf>=6.31.0",
    "grpcio>=1.64",
]

[project.urls]
Homepage = "https://github.com/tech-inspire/api-contracts"
Issues = "https://github.com/tech-inspire/api-contracts/issues"

[tool.setuptools]
package-dir = { "" = "api/gen/python" }

[tool.setuptools.packages.find]
where = ["api/gen/python"]
include = ["auth*", "embeddings*"]
exclude = ["tests*"]
